# Entreprise-assistant

./: .copier-answers.yml  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
data/sample_docs/compliance/: access_control_policy.md  change_management_policy.md  document_retention_policy.md  gdpr_data_handling_policy.md  vendor_security_review.md
data/sample_docs/hr/: expense_reimbursement_policy.md  leave_and_absence_policy.md  onboarding_policy.md  performance_review_process.md  remote_work_policy.md
data/sample_docs/it/: backup_and_restore_policy.md  incident_management_process.md  password_and_mfa_policy.md  software_access_request_process.md  vpn_access_guide.md
docs/: CONTRIBUTING.md  api.md  architecture.md  current-status.md  development-workflow.md  index.md  langfuse.md
src/enterprise_knowledge_assistant/: __init__.py  __main__.py  main.py
src/enterprise_knowledge_assistant/api/: __init__.py  router.py
src/enterprise_knowledge_assistant/api/routes/: health.py  indexing.py  query.py
src/enterprise_knowledge_assistant/api/schemas/: common.py  indexing.py  query.py
src/enterprise_knowledge_assistant/core/: __init__.py  config.py  dependencies.py  logging.py  observability.py  prompt_management.py
src/enterprise_knowledge_assistant/rag/: __init__.py  chunking.py  embeddings.py  ingestion.py  loaders.py  prompts.py  retriever.py  vector_store.py
src/enterprise_knowledge_assistant/rag/generator/: __init__.py  base.py  factory.py  mock.py  openai.py
src/enterprise_knowledge_assistant/services/: __init__.py  indexing_service.py  query_service.py
tests/api/: health_test.py  indexing_test.py  query_test.py  test_health.py
tests/core/: observability_test.py  prompt_management_test.py
tests/rag/: chunking_test.py  embeddings_test.py  ingestion_test.py  loaders_test.py  openai_generator_test.py  retriever_test.py  vector_store_test.py
tests/services/: indexing_service_test.py  query_service_test.py
