[project]
name = "enterprise_knowledge_assistant"
version = "0.1.0"
description = "Production-oriented RAG assistant for enterprise knowledge retrieval"
authors = [
  { name = "Ichrak Ennaceur", email = "ichraknaceurr@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.14"

dependencies = [
    "fastapi>=0.117.1,<0.118.0",
    "pydantic-settings>=2.11.0,<2.12.0",
    "uvicorn>=0.37.0,<0.38.0",
]

[tool.uv]
add-bounds = "minor"
package = true

[dependency-groups]
dev = [
    "diff-cover>=10.2.0,<10.3.0",
    "griffe-inherited-docstrings>=1.1.3,<1.2.0",
    "httpx>=0.28.1,<0.29.0",
    "mkdocs>=1.6.1,<1.7.0",
    "mkdocs-material>=9.7.6,<9.8.0",
    "mkdocstrings-python>=2.0.3,<2.1.0",
    "prek>=0.3.8,<0.3.9",
    "pytest>=9.0.3,<9.1.0",
    "pytest-cov>=7.1.0,<7.2.0",
    "pytest-mock>=3.15.1,<3.16.0",
    "ruff>=0.15.10,<0.15.11",
    "ty>=0.0.29,<0.0.30",
]

[tool.ruff]
output-format = "concise"
target-version = "py314"
line-length = 88
indent-width = 4

lint.pydocstyle.convention = "google"
lint.flake8-bandit.check-typed-exception = true
lint.flake8-type-checking.strict = true

lint.select = ["ALL"]
lint.ignore = [
  "PLE1205", # logging-too-many-args
  "D100", # pydocstyle
  "EM", # flake8-errmsg
  "INP001", # implicit-namespace-package
  "TRY003", # raise-vanilla-args
  "TRY401", # verbose-log-message
]
lint.extend-unfixable = [
  "TC002", # typing-only-third-party-import
  "TRY400", # error-instead-of-exception
  "SIM105", # suppressible-exception
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = [
    "S101", # Asserts allowed in tests...
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "PLR2004", # Magic value used in comparison, ...
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = ["--cov=src", "--cov-report=term", "--cov-report=xml"]

[tool.coverage.report]
exclude_also = [
  "@(abc\\.)?abstractmethod",
]
